--- a/Lottery/pages.css
+++ b/Lottery/pages.css
@@ -1,4 +1,4 @@
-.Backgorund {
+.bgsetting {
     width: 100%;
     height: 100vh;
     text-align: center;
@@ -13,19 +13,19 @@
     background-color: #FBB03B;
 }
 
-.WorkBackground {
+.workbg {
     background-color: #A67C52;
 }
 
 
-.Header {
+.header {
     width: 100%;
     height: 6.5vh;
     display: inline-block;
     margin-top: 3vh;
 }
 
-.HeaderOptions {
+.headeroptions {
     width: 40%;
     display: inline-block;
     background-color: white;
@@ -36,59 +36,59 @@
     margin-top: 1.5vh;
 }
 
-.HeaderOptions:hover {
+.headeroptions:hover {
     height: 6.5vh;
     line-height: 6.5vh;
     margin-top: 0vh;
     font-size: 20px;
 }
 
-.HeaderLeftOption {
+.headerleftoptions {
     border-radius: 10px 0 0 10px;
 }
 
-.HeaderRightOption {
+.headerrightoptions {
     border-radius: 0 10px 10px 0;
     margin-left: 1%;
 }
 
-.Lottery {
+.poemcancontent {
     display: inline-block;
     height: 52vh;
     margin-top: 12vh;
 }
 
-.LotteryPic:hover {
-    height: 52vh;
-    margin-top: 0vh;
-}
-
-.LotteryPic {
+#poemCan {
     height: 50vh;
     margin-top: 1vh;
 }
 
-.Bottom {
+#poemCan:hover {
+    height: 52vh;
+    margin-top: 0vh;
+}
+
+.bottom {
     width: 100%;
     height: 17vh;
 }
 
-.BackBtn {
+#backBtn {
     height: 15vh;
     margin-top: 1vh;
     margin-left: 70%;
 }
 
-.BackBtn:hover {
+#backBtn:hover {
     height: 17vh;
     margin-top: 0vh;
 }
 
-.BackBtnPic {
+.backbtnpic {
     height: 100%;
 }
 
-.hide {
+.poemhidden {
     display: none;
     background-color: rgba(0, 0, 0, 0.7);
     width: 100%;
@@ -98,7 +98,7 @@
     top: 0vh;
 }
 
-.show {
+.poemshowing {
     display: block;
     background-color: rgba(0, 0, 0, 0.7);
     width: 100%;
@@ -108,14 +108,14 @@
     top: 0vh;
 }
 
-#StickPic {
+#poemPic {
     position: absolute;
     height: 80vh;
     top: 15vh;
     transform: translateX(-50%);
 }
 
-.CloseBlock {
+.closecontent {
     height: 15vh;
     position: absolute;
     width: 100%;
@@ -123,57 +123,121 @@
     text-align: center;
 }
 
-#ClosePic {
+#closeBtn {
     height: 8vh;
     margin-top: 3.5vh;
     margin-left: 70%;
 }
 
-#ClosePic:hover {
+#closeBtn:hover {
     height: 9vh;
     margin-top: 3vh;
 }
 
 @media (max-width:768px) {
-    .Lottery {
+    .poemcancontent {
         height: 50vh;
         margin-top: 10vh;
     }
 
-    .LotteryPic {
-        height: 50vh;
+    #poemCan {
+        height: 48vh;
+        margin-top: 1vh;
     }
 
-    .BackBtn {
+    #poemCan:hover {
+        height: 50vh;
+        margin-top: 0vh;
+    }
+
+    #backBtn {
         height: 12vh;
         margin-top: 7vh;
         margin-left: 70%;
     }
 
-    .BackBtn:hover {
+    #backBtn:hover {
         height: 14vh;
         margin-top: 6vh;
     }
 }
 
 @media (max-width:500px) {
-    .Lottery {
+    .poemcancontent {
         height: 40vh;
         margin-top: 10vh;
     }
 
-    .LotteryPic {
-        height: 40vh;
+    #poemCan {
+        height: 38vh;
+        margin-top: 1vh;
     }
 
-    .BackBtn {
+    #poemCan:hover {
+        height: 40vh;
+        margin-top: 0vh;
+    }
+
+    #backBtn {
         height: 10vh;
         margin-top: 11vh;
         margin-left: 70%;
     }
 
-    .BackBtn:hover {
+    #backBtn:hover {
         height: 12vh;
         margin-top: 10vh;
+    }
+}
+
+.animationcontent {
+    position: absolute;
+    top: 0;
+    height: 100vh;
+    width: 100%;
+    text-align: center;
+}
+
+.whitecontent {
+    display: inline-block;
+    text-align: center;
+    width: 100%;
+}
+
+.whitebgpic {
+    height: 70vh;
+    margin: 15vh 0 -65vh 0;
+    display: inline-block;
+}
+
+.poemanimation {
+    height: 60vh;
+}
+
+.cutcontent {
+    width: 100%;
+    text-align: center;
+    display: inline-block;
+}
+
+.fullheight {
+    height: 100vh;
+}
+
+.poemanimationshowing {
+    display: inline-block;
+}
+
+.poemanimationhidden {
+    display: none;
+}
+
+@media (max-width:600px) {
+    .whitebgpic {
+        max-width: 80%;
+    }
+
+    .poemAnimation {
+        max-height: 50%;
     }
 }
