--- a/demo/demo.css
+++ b/demo/demo.css
@@ -175,6 +175,13 @@ a, a:hover {
     display: inline-block;
     border: #333 1px solid;
     padding: 1% 3%;
+    margin-top: 4vw;
+}
+
+@media (min-width:1400px) {
+    .footer-btn {
+        margin-top: 55px;
+    }
 }
 
 .footer-btn-text {
@@ -184,7 +191,7 @@ a, a:hover {
     color: #333;
 }
 
-.footer-btn-text::before{
+.footer-btn-text::before {
     content: '✉';
 }
 
