--- a/demo/demo.css
+++ b/demo/demo.css
@@ -111,7 +111,12 @@ a, a:hover {
 .col-item {
     display: inline-block;
     width: 24%;
+}
 
+@media (max-width:600px) {
+    .col-item {
+        width: 51%;
+    }
 }
 
 .col-item-center {
@@ -122,6 +127,12 @@ a, a:hover {
     background-color: #DBDBDB;
     width: 100%;
     height: 13vw;
+}
+
+@media (max-width:600px) {
+    .col-item-img {
+        height: 25vw;
+    }
 }
 
 .col-item-text {
@@ -170,11 +181,15 @@ a, a:hover {
     }
 }
 
+@media (max-width:600px) {
+    .footer-list-text {
+        line-height: 15px;
+    }
+}
+
 .footer-btn {
     float: right;
     display: inline-block;
-    border: #333 1px solid;
-    padding: 1% 3%;
     margin-top: 4vw;
 }
 
@@ -184,15 +199,26 @@ a, a:hover {
     }
 }
 
+@media (max-width:600px) {
+    .footer-btn {
+        clear: left;
+        float: left;
+        margin: 0;
+        padding: 2% 0 1% 0;
+    }
+}
+
 .footer-btn-text {
     display: inline-block;
     font-weight: bolder;
     font-size: 1.7vw;
     color: #333;
+    border: #333 1px solid;
 }
 
 .footer-btn-text::before {
     content: '✉';
+    margin-right: 10px;
 }
 
 @media (min-width:1400px) {
