--- a/demo/demo.css
+++ b/demo/demo.css
@@ -47,16 +47,27 @@ a, a:hover {
     display: inline-block;
     background-color: #DBDBDB;
     padding: 1% 3.5%;
-    font-size: 2vw;
     border: 2px solid #999;
+}
+
+.menu-item-text {
+    font-size: 2vw;
+    border-bottom: 2px solid rgba(0, 0, 0, 0);
+    transition: border-bottom .3s ease-in-out;
 }
 
 .menu-item:hover {
     background-color: #C1C1C1;
+    transition: background-color .3s linear;
+}
+
+.menu-item:hover>.menu-item-text {
+    border-bottom: 2px solid #999;
+
 }
 
 @media (min-width:1400px) {
-    .menu-item {
+    .menu-item-text {
         font-size: 30px;
     }
 }
@@ -113,6 +124,16 @@ a, a:hover {
     width: 24%;
 }
 
+.col-item:hover>.col-item-img {
+    background-color: #999;
+    transition: background-color 0.3s ease-in-out;
+}
+
+.col-item:hover>.col-item-text {
+    border-bottom: #333 2px solid;
+    transition: border-bottom 0.3s ease-in-out;
+}
+
 @media (max-width:600px) {
     .col-item {
         width: 51%;
@@ -140,6 +161,8 @@ a, a:hover {
     margin: 3% 0;
     font-size: 1.8vw;
     font-weight: bolder;
+    display: inline-block;
+    border-bottom: rgba(0, 0, 0, 0) 2px solid;
 }
 
 @media (min-width:1400px) {
@@ -190,12 +213,19 @@ a, a:hover {
 .footer-btn {
     float: right;
     display: inline-block;
-    margin-top: 4vw;
+    border: #333 1px solid;
+    padding: 1.5% 3.5%;
+    margin-top: 3.2vw;
+}
+
+.footer-btn:hover{
+    background-color: #eee;
+    transition: background-color 0.3s ease-in-out;
 }
 
 @media (min-width:1400px) {
     .footer-btn {
-        margin-top: 55px;
+        margin-top: 50px;
     }
 }
 
@@ -203,8 +233,8 @@ a, a:hover {
     .footer-btn {
         clear: left;
         float: left;
-        margin: 0;
-        padding: 2% 0 1% 0;
+        margin: 10px 0 5px 0;
+        padding: 1.5% 3.5%;
     }
 }
 
@@ -213,7 +243,6 @@ a, a:hover {
     font-weight: bolder;
     font-size: 1.7vw;
     color: #333;
-    border: #333 1px solid;
 }
 
 .footer-btn-text::before {
