--- a/monzzle/css/allpage.css
+++ b/monzzle/css/allpage.css
@@ -23,6 +23,7 @@
 
 .row {
     width: 100%;
+    margin: 0;
 }
 
 .block {
@@ -73,4 +74,11 @@ a {
     .main{
         width: 100%;
     }
+}
+
+.footer-text {
+    text-align: center;
+    border-top: 0.1px solid rgba(0, 0, 0, 0.2);
+    padding: 20px 0 30px 0;
+    margin-top: 100px;
 }
