--- a/monzzle/css/allpage.css
+++ b/monzzle/css/allpage.css
@@ -153,6 +153,12 @@ a {
     color: #000;
 }
 
+.href-text {
+    height: 56px;
+    width: 100%;
+    margin-top: -36px;
+}
+
 /* 右邊菜單 */
 .menu {
     position: fixed;
