--- a/se4/style.css
+++ b/se4/style.css
@@ -90,9 +90,6 @@ header .logo {
 }
 
 header .navigation a {
-    position: relative;
-    display: inline-block;
-    width: 88px;
     color: #513A35;
     font-size: 1.1em;
     font-weight: 500;
@@ -109,7 +106,7 @@ header .navigation a:not(:last-child) {
 
 header .navigation a:hover {
     background: linear-gradient(to bottom, #513A35, #805F55);
-    color: #fff;
+    color: #ebebeb;
 }
 
 label {
