--- a/monzzle2.0/style.css
+++ b/monzzle2.0/style.css
@@ -1,6 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Serif+TC:wght@400;500;600;700;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap');
 
+main-color {
+    color: #9ECABF;
+    color: #DF9A76;
+    color: #805F55;
+    color: #513A35;
+    color: #a8877d;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -17,7 +25,7 @@ body {
 
 .loader_bg {
     position: fixed;
-    background: #333;
+    background: #513A35;
     width: 100%;
     height: 100%;
     z-index: 1000000000;
@@ -42,7 +50,7 @@ body {
     border-radius: 50px;
     border: 20px ridge;
     border-width: 25px;
-    border-color: #2EE3E8 transparent;
+    border-color: #9ECABF transparent;
     animation: load 1s infinite;
 }
 
@@ -94,6 +102,16 @@ header {
 
 header .logo img {
     height: 60px;
+}
+
+@media (max-width:600px) {
+    header {
+        padding: 20px 0 0 35px;
+    }
+
+    header .logo img {
+        display: none;
+    }
 }
 
 header .menu-btn {
