--- a/monzzle2.0/css/about.css
+++ b/monzzle2.0/css/about.css
@@ -1,4 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif+TC:wght@400;500;600;700;900&display=swap');
+
+main-color {
+    color: #9ECABF;
+    color: #DF9A76;
+    color: #805F55;
+    color: #513A35;
+    color: #a8877d;
+}
 
 * {
     margin: 0;
@@ -6,74 +15,102 @@
     box-sizing: border-box;
 }
 
-.logo a img {
-    display: none;
-}
-
-#menu-border {
-    border: 0.2rem solid #FFF;
-    transition: 1s ease-in-out;
-    transition-property: border;
-}
-
-header .menu-btn i {
-    color: #FFF;
-    transition: 1s ease-in-out;
-    transition-property: color;
-}
-
 section {
-    position: relative;
     width: 100%;
     height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-section .box {
-    position: absolute;
-    top: 0;
-    left: 0;
+/* section 1 */
+.title-content {
     width: 100%;
+    position: relative;
+    height: 35%;
+    padding: 0 17vw;
+}
+
+.title-text {
+    position: absolute;
+    color: #513A35;
+    animation: effect 12s ease-in-out infinite;
+}
+
+.title-text p {
+    font-size: 2rem;
+    letter-spacing: 5px;
+}
+
+.title-text h1 {
+    font-size: 8rem;
+    margin-top: -20px;
+    letter-spacing: 35px;
+}
+
+.title-text:nth-child(1) {
+    animation-delay: -12s;
+}
+
+.title-text:nth-child(2) {
+    animation-delay: -6s;
+}
+
+@keyframes effect {
+    0%, 20%, 100% {
+        filter: blur(0px);
+        opacity: 1;
+    }
+
+    40%, 80% {
+        filter: blur(16px);
+        opacity: 0;
+    }
+}
+
+/* section 2 */
+.s2, .s3 {
+    margin-top: -15vh;
+}
+
+.section-60 {
+    width: 65%;
     height: 100%;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0 17.29167vw;
+}
+
+.section-60 h1 {
+    font-size: 3rem;
+    padding: 10px 0;
+}
+
+.section-60 p {
+    font-size: 1.3rem;
+}
+
+.section-40 {
+    width: 35%;
+    height: 100%;
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-section .box2 {
-    background-color: #805F55;
-    clip-path: polygon(0 0, 100% 0, 100% 50%, 0 50%);
+.s2 .section-40 {
+    background: #FCB70F;
 }
 
-section .box h2 {
-    color: #805F55;
-    font-size: 5vw;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    animation: animate 5s ease-in-out infinite;
-    animation-delay: -5s;
-    font-family: 'Poppins', serif;
+.s3 .section-40 {
+    background: #000;
 }
 
-@keyframes animate {
-    0%, 45% {
-        transform: translateY(-70%);
-    }
-
-    55%, 90% {
-        transform: translateY(70%);
-    }
-
-    100% {
-        transform: translateY(-70%);
-    }
-}
-
-section .box.box2 h2 {
-    color: #FFF;
-}
-
-section .box h2 span:nth-child(2) {
-    line-height: 1em;
-    font-size: 2em;
+.section-40 img {
+    object-fit: contain;
+    width: 100%;
+    height: 100%;
 }
