--- a/monzzle2.0/css/menu.css
+++ b/monzzle2.0/css/menu.css
@@ -1,11 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Serif+TC:wght@400;500;600;700;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap');
 
+main-color {
+    color: #9ECABF;
+    color: #DF9A76;
+    color: #805F55;
+    color: #513A35;
+    color: #a8877d;
+}
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     scroll-behavior: smooth;
+    font-family: 'Poppins', 'Noto Serif TC', serif;
 }
 
 header {
@@ -71,7 +80,6 @@ header .menu-btn i {
     z-index: 3;
     transform: translateY(-100%);
     transition: 0.6s;
-    font-family: 'Noto Serif TC', serif;
 }
 
 .menu .left {
@@ -141,7 +149,6 @@ header .menu-btn i {
 
 .menu .right .infos .info span {
     letter-spacing: 1px;
-    font-family: 'Poppins', sans-serif;
     font-weight: 600;
 }
 
