--- a/monzzle2.0/css/about.css
+++ b/monzzle2.0/css/about.css
@@ -15,9 +15,14 @@ main-color {
     box-sizing: border-box;
 }
 
+body {
+    width: 100vw;
+    overflow-x: hidden;
+}
+
 section {
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -48,6 +53,30 @@ section {
     letter-spacing: 35px;
 }
 
+@media (max-width:1055px) {
+    .title-text p {
+        font-size: 1.5rem;
+        letter-spacing: 3px;
+    }
+
+    .title-text h1 {
+        font-size: 6rem;
+        letter-spacing: 25px;
+    }
+}
+
+@media (max-width:750px) {
+    .title-text p {
+        font-size: 1rem;
+        letter-spacing: 1.5px;
+    }
+
+    .title-text h1 {
+        font-size: 4rem;
+        letter-spacing: 15px;
+    }
+}
+
 .title-text:nth-child(1) {
     animation-delay: -12s;
 }
@@ -68,11 +97,13 @@ section {
     }
 }
 
-/* section 2 */
+
+
 .s2, .s3 {
     margin-top: -15vh;
 }
 
+/* sections */
 .section-60 {
     width: 65%;
     height: 100%;
@@ -81,6 +112,18 @@ section {
     justify-content: center;
     align-items: center;
     padding: 0 17.29167vw;
+}
+
+@media (max-width:1000px) {
+    .section-60 {
+        padding: 0 12.29167vw;
+    }
+}
+
+@media (max-width:800px) {
+    .section-60 {
+        padding: 0 8.29167vw;
+    }
 }
 
 .section-60 h1 {
@@ -101,6 +144,49 @@ section {
     align-items: center;
 }
 
+@media (max-width:1000px) {
+    .section-60 h1 {
+        font-size: 2rem;
+    }
+
+    .section-60 p {
+        font-size: 1.1rem;
+    }
+}
+
+@media (max-width:800px) {
+    .section-60 h1 {
+        font-size: 1.5rem;
+    }
+
+    .section-60 p {
+        font-size: 0.9rem;
+    }
+
+    .section-40, .section-60 {
+        width: 100%;
+        height: 50vh;
+    }
+
+    .s2, .s3, .s4 {
+        display: block;
+    }
+
+    .s2, .s3 {
+        margin-top: 0;
+    }
+
+    .s2 {
+        -webkit-flex-flow: column-reverse;
+        flex-flow: column-reverse;
+        display: -webkit-box;
+        display: -moz-box;
+        display: -ms-flexbox;
+        display: -webkit-flex;
+        display: flex;
+    }
+}
+
 .s2 .section-40 {
     background: #FCB70F;
 }
@@ -113,4 +199,238 @@ section {
     object-fit: contain;
     width: 100%;
     height: 100%;
+}
+
+
+/* section 4 Lorem*/
+.s4 .section-40, .s4 .section-60 {
+    min-height: 70vh;
+    align-items: flex-start;
+}
+
+.s4 .section-40, .s6 .section-40 {
+    padding-right: 15vw;
+    font-size: 1.3rem;
+}
+
+.s4 .section-40 p:first-child {
+    padding-bottom: 10px;
+}
+
+.s4 .section-40 p:first-child, .s4 .section-60 p {
+    color: #999;
+}
+
+@media (max-width:1200px) {
+    .s4 .section-60 h1 {
+        font-size: 2.5rem;
+    }
+}
+
+@media (max-width:1000px) {
+    .s4 .section-60 h1 {
+        font-size: 2rem;
+    }
+
+    .s4 .section-40, .s6 .section-40 {
+        font-size: 1rem;
+        padding-right: 12vw;
+    }
+
+    .s4 .section-40 p:first-child, .s4 .section-60 p {
+        font-size: 0.8rem;
+    }
+}
+
+@media (max-width:800px) {
+    .s4 .section-60 h1 {
+        font-size: 1.5rem;
+    }
+
+    .s4 .section-40, .s6 .section-40 {
+        font-size: 0.8rem;
+        padding-right: 8vw;
+    }
+
+    .s4 .section-40 p:first-child, .s4 .section-60 p {
+        font-size: 0.6rem;
+    }
+
+    .s4 .section-40, .s4 .section-60 {
+        height: 100%;
+        min-height: 100%;
+        align-items: center;
+        padding: 50px;
+    }
+
+    .s4 .section-40 {
+        padding-top: 0;
+    }
+
+    .s4 {
+        min-height: 100%;
+    }
+}
+
+/* section 5 Members*/
+.s5 {
+    background: #000;
+    color: #FFF;
+    display: block;
+}
+
+.s5 .section-title {
+    text-align: center;
+    width: 100%;
+    padding: 250px 0 150px 0;
+}
+
+.s5 .section-title p {
+    font-size: 1.3rem;
+}
+
+.s5 .section-title h1 {
+    font-size: 4rem;
+    letter-spacing: 3px;
+}
+
+.members-content {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.members-content .member {
+    width: 30vw;
+    padding: 7vw;
+}
+
+@media (max-width:1000px) {
+    .members-content .member {
+        width: 50vw;
+        padding: 10vw;
+    }
+
+    .s5 .section-title {
+        padding: 200px 0 150px 0;
+    }
+
+    .s5 .section-title p {
+        font-size: 1.1rem;
+    }
+
+    .s5 .section-title h1 {
+        font-size: 3rem;
+        letter-spacing: 2.5px;
+    }
+
+}
+
+@media (max-width:800px) {
+    .members-content .member {
+        width: 100vw;
+        padding: 10vw 25vw;
+    }
+
+    .s5 .section-title {
+        padding: 150px 0 150px 0;
+    }
+
+    .s5 .section-title p {
+        font-size: 1rem;
+    }
+
+    .s5 .section-title h1 {
+        font-size: 2rem;
+        letter-spacing: 2px;
+    }
+
+}
+
+.members-content .member .member-text {
+    text-align: left;
+}
+
+.member img {
+    width: 100%;
+}
+
+
+/* section 6 Contact us*/
+.s6 {
+    min-height: 80vh;
+}
+
+.s6 .content {
+    position: relative;
+    cursor: pointer;
+}
+
+.content-text {
+    position: absolute;
+    overflow: hidden;
+    margin-left: -250px;
+}
+
+.content p {
+    transition: 0.3s;
+    font-size: 2rem;
+}
+
+
+.content-text p::before {
+    content: 'Contact us　　';
+    display: inline-block;
+    position: absolute;
+}
+
+.content-text p::after {
+    content: 'Contact us →';
+    width: 100%;
+    display: inline-block;
+    position: absolute;
+    transform: rotate(10deg);
+    left: 0;
+    top: 120%;
+}
+
+.content-text p.hover {
+    transform: rotate(-10deg) translateY(-120%);
+}
+
+
+.s6 .content div h1 {
+    position: relative;
+    top: 20px;
+    font-size: 10rem;
+    letter-spacing: 8px;
+}
+
+@media (max-width:1200px) {
+    .s6 .content div h1 {
+        font-size: 7rem;
+    }
+
+    .content p {
+        font-size: 1.5rem;
+    }
+
+    .content-text {
+        margin-left: -150px;
+    }
+}
+
+@media (max-width:870px) {
+    .s6 .content div h1 {
+        font-size: 5rem;
+    }
+
+    .content p {
+        font-size: 1rem;
+    }
+
+    .content-text {
+        margin-left: 0px;
+    }
 }
