--- a/monzzle2.0/css/about.css
+++ b/monzzle2.0/css/about.css
@@ -53,9 +53,9 @@ main-color {
 }
 
 body {
-    width: 100vw;
-    overflow-x: hidden;
     position: relative;
+    overflow-x: hidden;
+    height: 100%;
 }
 
 section {
@@ -102,6 +102,10 @@ section {
 
     .title-text h1 {
         margin-top: -10px;
+    }
+
+    .title-content {
+        padding: 0 0 0 10vw;
     }
 }
 
