--- a/monzzle2.0/css/about.css
+++ b/monzzle2.0/css/about.css
@@ -210,6 +210,11 @@ section {
     background: #000;
 }
 
+.s3 .section-40 {
+    
+}
+
+
 .section-40 img {
     object-fit: contain;
     width: 100%;
