--- a/monzzle2.0/css/menu.css
+++ b/monzzle2.0/css/menu.css
@@ -1,6 +1,41 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Serif+TC:wght@400;500;600;700;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap');
 
+:root {
+    --btn-size: 1.8rem;
+    --btn-border: 100px;
+    --logo-size: 60px;
+    --nav-size: 2rem;
+    --nav-small: 1.2rem;
+}
+
+@media (max-width:1200px) {
+    :root {
+        --btn-size: 1.8rem;
+        --logo-size: 55px;
+        --nav-size: 1.5rem;
+    }
+}
+
+@media (max-width:1000px) {
+    :root {
+        --btn-size: 1.8rem;
+        --btn-border: 90px;
+        --logo-size: 50px;
+        --nav-size: 1.4rem;
+        --nav-small: 1rem;
+    }
+}
+
+@media (max-width:800px) {
+    :root {
+        --btn-size: 1.8rem;
+        --btn-border: 70px;
+        --logo-size: 45px;
+        --nav-size: 1.3rem;
+    }
+}
+
 main-color {
     color: #9ECABF;
     color: #DF9A76;
@@ -25,20 +60,22 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 30px 100px;
+    padding: 30px 60px 30px 100px;
 }
 
 header .logo img {
-    height: 60px;
+    height: var(--logo-size);
 }
 
-@media (max-width:800px) {
+@media (max-width:1000px) {
     header {
-        padding: 20px 0 20px 35px;
+        padding: 30px 30px 30px 80px;
     }
+}
 
-    header .logo img {
-        display: none;
+@media (max-width:600px) {
+    header {
+        padding: 15px 10px 15px 40px;
     }
 }
 
@@ -48,22 +85,22 @@ header .menu-btn {
     justify-content: center;
     align-items: center;
     position: relative;
-    width: 100px;
-    height: 100px;
-    margin-top: -100px;
+    width: var(--btn-border);
+    height: var(--btn-border);
+    margin-top: calc(var(--btn-border) * -1);
 }
 
 #menu-border {
     border-radius: 50%;
-    width: 100px;
-    height: 100px;
+    width: var(--btn-border);
+    height: var(--btn-border);
     border: 0.2rem solid #805F55;
     position: relative;
     transform: scale(0);
 }
 
 header .menu-btn i {
-    font-size: 1.8rem;
+    font-size: var(--btn-size);
     color: #513A35;
 }
 
@@ -110,7 +147,7 @@ header .menu-btn i {
     display: block;
     text-decoration: none;
     color: #513A35;
-    font-size: 3.5vmin;
+    font-size: var(--nav-size);
     font-weight: 700;
     padding: 15px 0;
     letter-spacing: 10px;
@@ -140,7 +177,7 @@ header .menu-btn i {
 }
 
 .menu .right .infos .info {
-    font-size: 1.2rem;
+    font-size: var(--nav-small);
     padding: 10px 0;
     letter-spacing: 5px;
     color: #513A35;
