--- a/xinglong-map/style.css
+++ b/xinglong-map/style.css
@@ -11,6 +11,47 @@ html, body, #map {
     width: 100vw;
 }
 
+.loader_bg {
+    position: fixed;
+    background: #232323;
+    width: 100%;
+    height: 100vh;
+    z-index: 1000000000;
+}
+
+.loader {
+    width: 100px;
+    height: 100px;
+    top: calc(50vh - 50px);
+    left: calc(50vw - 50px);
+    display: flex;
+    position: absolute;
+    justify-content: center;
+    align-items: center;
+}
+
+.loader::before {
+    content: '';
+    height: 30px;
+    width: 30px;
+    background: transparent;
+    border-radius: 50px;
+    border: 20px ridge;
+    border-width: 25px;
+    border-color: #6bf7d4 transparent;
+    animation: load 1s infinite;
+}
+
+@keyframes load {
+    50% {
+        transform: rotateZ(180deg);
+    }
+
+    100% {
+        transform: rotateZ(360deg);
+    }
+}
+
 .leaflet-popup-content {
     font-size: 1.5rem;
     padding: 5px 10px;
