--- a/xinglong-map/style.css
+++ b/xinglong-map/style.css
@@ -92,7 +92,7 @@ section {
 }
 
 @media (max-width:900px) {
-    section #setview-btn {
+    .btn {
         width: 80px;
         height: 80px;
         right: 15px;
