--- a/xinglong-map/css/introduction.css
+++ b/xinglong-map/css/introduction.css
@@ -6,6 +6,7 @@
     --sec-p: 1.3rem;
     --big-title: 8rem;
     --big-p: 2rem;
+    --height: 45px;
 }
 
 @media (max-width:1200px) {
@@ -15,6 +16,7 @@
         --gary-p: 0.9rem;
         --big-title: 6rem;
         --big-p: 1.7rem;
+        --height: 39px;
     }
 }
 
@@ -25,6 +27,7 @@
         --gary-p: 0.8rem;
         --big-title: 5rem;
         --big-p: 1.5rem;
+        --height: 33px;
     }
 }
 
@@ -35,6 +38,7 @@
         --gary-p: 0.6rem;
         --big-title: 4rem;
         --big-p: 1.2rem;
+        --height: 27px;
     }
 }
 
@@ -65,73 +69,6 @@ section {
     align-items: center;
     justify-content: center;
     overflow-x: hidden;
-}
-
-/* section 1 */
-.title-content {
-    width: 100%;
-    position: relative;
-    height: 35%;
-    padding: 0 17vw;
-}
-
-.title-text {
-    position: absolute;
-    color: #254820;
-    animation: effect 12s ease-in-out infinite;
-}
-
-.title-text p {
-    font-size: var(--big-p);
-    letter-spacing: 5px;
-}
-
-.title-text h1 {
-    font-size: var(--big-title);
-    margin-top: -20px;
-    letter-spacing: 35px;
-}
-
-.title-text2 h1 {
-    letter-spacing: 15px;
-}
-
-@media (max-width:750px) {
-    .title-text p {
-        letter-spacing: 1.5px;
-    }
-
-    .title-text h1 {
-        letter-spacing: 15px;
-    }
-
-    .title-text h1 {
-        margin-top: -10px;
-    }
-
-    .title-content {
-        padding: 0 0 0 10vw;
-    }
-}
-
-.title-text:nth-child(1) {
-    animation-delay: -12s;
-}
-
-.title-text:nth-child(2) {
-    animation-delay: -6s;
-}
-
-@keyframes effect {
-    0%, 20%, 100% {
-        filter: blur(0px);
-        opacity: 1;
-    }
-
-    40%, 80% {
-        filter: blur(16px);
-        opacity: 0;
-    }
 }
 
 .s2, .s3 {
@@ -177,6 +114,7 @@ section {
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 0 30px;
 }
 
 
@@ -205,21 +143,12 @@ section {
     }
 }
 
-.s2-1 .section-40 {
-    background: #b3dce2;
-}
-
-.s2-2 .section-40 {
-    background: #c7cf94;
-}
-
-.s2-3 .section-40 {
-    background: #bcd7ac;
+.s2 .section-40 {
+    background: #C9781F;
 }
 
 .s3 .section-40 {
-    background: #fdba72;
-    padding: 0 20px;
+    background: #699663;
 }
 
 .section-40 img {
@@ -237,7 +166,8 @@ section {
 
 .s6 .content {
     position: relative;
-    /* cursor: pointer; */
+    cursor: pointer;
+    color: #254820;
 }
 
 .content-text {
@@ -257,20 +187,8 @@ section {
     position: absolute;
 }
 
-.s6-1 .content-text p::before {
-    content: 'Taichung　　';
-}
-
-.s6-2 .content-text p::before {
-    content: 'Taiping　　';
-}
-
-.s6-3 .content-text p::before {
-    content: 'XingLong　　';
-}
-
-.s6-4 .content-text p::before {
-    content: 'More　　';
+.s6 .content-text p::before {
+    content: '更換景點　　';
 }
 
 .content-text p::after {
@@ -282,22 +200,9 @@ section {
     top: 120%;
 }
 
-.s6-1 .content-text p::after {
-    content: 'Taichung →';
+.s6 .content-text p::after {
+    content: '更換景點→';
 }
-
-.s6-2 .content-text p::after {
-    content: 'Taiping →';
-}
-
-.s6-3 .content-text p::after {
-    content: 'XingLong →';
-}
-
-.s6-4 .content-text p::after {
-    content: 'More →';
-}
-
 
 .content-text p.hover {
     transform: rotate(-10deg) translateY(-120%);
@@ -321,4 +226,60 @@ section {
     .content-text {
         margin-left: 0px;
     }
+}
+
+/*attractions*/
+.attractions {
+    position: fixed;
+    z-index: 2000;
+    background: rgba(255, 255, 255, 0.7);
+    justify-content: center;
+    align-items: center;
+    display: none;
+}
+
+.att-navs {
+    background: #fff;
+    border-radius: 20px;
+    box-shadow: 4px 4px 7px 7px #2548209a;
+    padding: 20vh 25vw;
+}
+
+.att-nav {
+    font-size: var(--big-p);
+    letter-spacing: 2px;
+    color: #254820;
+    font-weight: 700;
+    margin: 20px 0;
+    cursor: pointer;
+    text-align: justify;
+    width: 100%;
+    height: var(--height);
+}
+
+.att-nav::after {
+    content: "";
+    display: inline-block;
+    width: 100%;
+}
+
+.btn-content {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.btn-content i {
+    font-size: var(--big-p);
+    transform: translateX(-100%) translateY(150%);
+    cursor: pointer;
+    padding: 20px;
+    transition: 0.3s;
+}
+
+.btn-content i:hover {
+    transform: translateX(-100%) translateY(150%) scale(1.3);
+}
+
+.s2, .s3 {
+    display: none;
 }
