--- a/monzzle2.0/css/monster.css
+++ b/monzzle2.0/css/monster.css
@@ -562,7 +562,7 @@ section {
     transform-style: preserve-3d;
     transform: translate3d(-50%, 0, 75px);
     color: #232323;
-    background: url(../resource/monster/null-good.jpg);
+    background: url(../monzzle2.0/resource/monster/null-good.jpg);
     padding: 10px 25px;
     border-radius: 30px;
     text-decoration: none;
@@ -584,7 +584,7 @@ section {
     height: 20vw;
     border-radius: 50%;
     transition: 0.5s;
-    background: url(../resource/monster/null-good.jpg);
+    background: url(../monzzle2.0/resource/monster/null-good.jpg);
     transform-style: preserve-3d;
     /* z-index: 10; */
     opacity: 1;
