--- a/monzzle3.0/css/about.css
+++ b/monzzle3.0/css/about.css
@@ -6,3 +6,10 @@
     background: #000;
 }
 
+.content-text p::before {
+    content: 'Contact us　　';
+}
+
+.content-text p::after {
+    content: 'Contact us →';
+}
