--- a/monzzle3.0/css/monster.css
+++ b/monzzle3.0/css/monster.css
@@ -51,7 +51,7 @@
 }
 
 /*monster-nav*/
-.nav-content {
+.navigation {
     position: fixed;
     z-index: 2000;
     background: rgba(255, 255, 255, 0.7);
