--- a/monzzle3.0/css/about.css
+++ b/monzzle3.0/css/about.css
@@ -5,3 +5,11 @@
 .s-40-60 .section-40 {
     background: #000;
 }
+
+.content-text p::after{
+    content: 'Contact us　→';
+}
+
+.content-text p::before{
+    content: 'Contact us　　';
+}
