--- a/monzzle3.0/css/monster.css
+++ b/monzzle3.0/css/monster.css
@@ -46,133 +46,13 @@
     min-width: 130px;
 }
 
-/*monster-nav*/
-.navigation {
-    position: absolute;
-    z-index: 2000;
-    background: rgba(255, 255, 255, 0.7);
-    justify-content: center;
-    align-items: center;
-    display: none;
+.content-text p::after{
+    content: '更換妖怪　→';
 }
 
-.m-navs {
-    background: #fff;
-    border-radius: 20px;
-    box-shadow: 4px 4px 7px 7px #2548209a;
-    padding: 20vh 25vw;
-    display: flex;
-    min-height: 60vh;
-    min-width: 50vw;
+.content-text p::before{
+    content: '更換妖怪　　';
 }
-
-@media (max-width:800px) {
-    .m-navs {
-        padding: 15vh 20vw;
-        min-height: 60vh;
-        min-width: 80vw;
-    }
-}
-
-.left-nav, .right-nav {
-    font-size: var(--big-p);
-    letter-spacing: 2px;
-    color: #254820;
-    font-weight: 700;
-    margin: 20px 0;
-    cursor: pointer;
-    text-align: justify;
-    width: 100%;
-    height: var(--height);
-}
-
-.left-nav::after, .right-nav::after {
-    content: "";
-    display: inline-block;
-    width: 100%;
-}
-
-.btn-content {
-    display: flex;
-    justify-content: flex-end;
-}
-
-.btn-content i {
-    font-size: var(--big-p);
-    transform: translateX(-100%) translateY(150%);
-    cursor: pointer;
-    padding: 20px;
-    transition: 0.3s;
-}
-
-.btn-content i:hover {
-    transform: translateX(-100%) translateY(150%) scale(1.3);
-}
-
-.good, .bad {
-    margin-left: 50px;
-    z-index: 200;
-}
-
-.good, .bad {
-    display: none;
-}
-
-
-
-/* s-monster */
-.monster-content {
-    display: none;
-}
-
-.section-50 {
-    width: 50%;
-    height: 100vh;
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.section-50:first-child {
-    padding: 0 15vw;
-}
-
-.section-50 h1 {
-    font-size: var(--sec-title);
-    padding: 10px 0;
-}
-
-.section-50 p {
-    font-size: var(--sec-p);
-}
-
-
-@media (max-width:800px) {
-    .section-50 {
-        width: 100%;
-        height: 50vh;
-    }
-
-    .s-monster {
-        display: block;
-    }
-
-    .s-monster {
-        margin-top: 0;
-    }
-
-    .s-monster {
-        -webkit-flex-flow: column-reverse;
-        flex-flow: column-reverse;
-        display: -webkit-box;
-        display: -moz-box;
-        display: -ms-flexbox;
-        display: -webkit-flex;
-        display: flex;
-    }
-}
-
 
 /*card v2*/
 .container {
@@ -222,7 +102,8 @@
     transition: 0.5s;
 }
 
-.container .box:hover::before, .container .box:hover::after {
+.container .box:hover::before,
+.container .box:hover::after {
     opacity: 0.04;
 }
 
@@ -305,7 +186,8 @@
         height: 80vh;
     }
 
-    .container .box::before, .container .box::after {
+    .container .box::before,
+    .container .box::after {
         opacity: 0.04;
     }
 
