--- a/haveagoodidea/css/shop.css
+++ b/haveagoodidea/css/shop.css
@@ -88,7 +88,7 @@
 
 }
 
-#product-name{
+#product-name {
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
@@ -147,7 +147,7 @@
 
 .product-content {
     width: 80%;
-    height: 80vh;
+    min-height: 80vh;
 }
 
 .product-infos {
@@ -155,14 +155,14 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 100%;
+    min-height: 80vh;
     transform: translateY(-5%);
 }
 
 .popup-left,
 .popup-right {
     width: 50%;
-    height: 100%;
+    min-height: 100%;
     padding: 5%;
     display: flex;
     flex-wrap: wrap;
@@ -185,6 +185,11 @@
         flex-wrap: wrap;
         justify-content: center;
         align-items: center;
+    }
+
+    .popup-right {
+        overflow: hidden;
+        text-overflow: ellipsis;
     }
 }
 
