--- a/monzzle3.0/css/monster.css
+++ b/monzzle3.0/css/monster.css
@@ -53,10 +53,20 @@ body::-webkit-scrollbar {
     display: none;
 }
 
-body {
-    overflow-x: hidden;
+html {
+    position: fixed;
+    height: 100%;
+    overflow: hidden;
 }
 
+body {
+    margin: 0;
+    width: 100vw;
+    height: 100%;
+    overflow-y: auto;
+    overflow-x: hidden;
+    -webkit-overflow-scrolling: touch;
+}
 
 section {
     height: 100vh;
