--- a/monzzle3.0/css/monster.css
+++ b/monzzle3.0/css/monster.css
@@ -56,16 +56,11 @@ body::-webkit-scrollbar {
 html {
     position: fixed;
     height: 100%;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 body {
-    margin: 0;
-    width: 100vw;
-    height: 100%;
-    overflow-y: auto;
     overflow-x: hidden;
-    -webkit-overflow-scrolling: touch;
 }
 
 section {
