--- a/monzzle3.0/css/monster.css
+++ b/monzzle3.0/css/monster.css
@@ -154,6 +154,44 @@ section {
     }
 }
 
+/*bottom nav*/
+.nav-content {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 95vh;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+}
+
+.waviy {
+    -webkit-box-reflect: below -10px linear-gradient(transparent, rgba(0, 0, 0, .2));
+    font-size: 1em;
+    cursor: pointer;
+}
+
+.waviy span {
+    display: inline-block;
+    text-transform: uppercase;
+    animation: waviy 2.8s infinite;
+    animation-delay: calc(.4s * var(--i));
+
+}
+
+@keyframes waviy {
+
+    0%,
+    40%,
+    100% {
+        transform: translateY(0)
+    }
+
+    20% {
+        transform: translateY(-10px)
+    }
+}
 
 /* navigation */
 .navigation {
