--- a/monzzle3.0/css/monster.css
+++ b/monzzle3.0/css/monster.css
@@ -99,6 +99,8 @@ section {
     margin-top: 15vh;
     z-index: 10;
     /* transform: translate(-38vw); */
+    overflow-x: hidden;
+
 }
 
 .s-transition {
